src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Istok Web font 
Приклад використання:
<div className="font-istok">
  Цей текст буде відображатись шрифтом 'IstokWeb-Regular' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: 'IstokWeb-Regular';
  src: url('./assets/fonts/Istok_Web/woff2/istokweb-regular-webfont.woff2') format('woff2'),
    url('./assets/fonts/Istok_Web/woff/istokweb-regular-webfont.woff') format('woff');
  font-weight: 400;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Regular font 
Приклад використання:
<div className="font-proza">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Regular' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: 'ProzaLibre-Regular';
  src: url('./assets/fonts/Proza_Libre/woff2/prozalibre-regular-webfont.woff2') format('woff2'),
    url('./assets/fonts/Proza_Libre/woff/prozalibre-regular-webfont.woff') format('woff');
  font-weight: 400;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Medium font 
Приклад використання:
<div className="font-proza-medium">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Medium' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: 'ProzaLibre-Medium';
  src: url('./assets/fonts/Proza_Libre/woff2/prozalibre-medium-webfont.woff2') format('woff2'),
    url('./assets/fonts/Proza_Libre/woff/prozalibre-medium-webfont.woff') format('woff');
  font-weight: 500;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre SemiBold font 
Приклад використання:
<div className="font-proza-semibold">
  Цей текст буде відображатись шрифтом 'ProzaLibre-SemiBold' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: 'ProzaLibre-SemiBold';
  src: url('./assets/fonts/Proza_Libre/woff2/prozalibre-semibold-webfont.woff2') format('woff2'),
    url('./assets/fonts/Proza_Libre/woff/prozalibre-semibold-webfont.woff') format('woff');
  font-weight: 600;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Bold font 
Приклад використання:
<div className="font-proza-bold">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Bold' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: 'ProzaLibre-Bold';
  src: url('./assets/fonts/Proza_Libre/woff2/prozalibre-bold-webfont.woff2') format('woff2');
  font-weight: 700;
  font-stretch: normal;
  font-display: swap;
}

input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.primaryBtn {
  @apply font-istok font-bold text-[20px] leading-[32px] flex justify-center items-center gap-[6px] py-[9px] px-[18px] border border-solid border-my-black5 rounded-[10px] hover:bg-my-yellow hover:transition-all;
}

.label {
  @apply font-istok font-normal text-[16px] leading-[22px] flex flex-col items-start gap-[6px] p-0;
}

.field {
  @apply text-[20px] leading-[24px] min-h-[56px] w-full py-[14px] px-[18px] placeholder:text-my-gray border border-solid border-my-black5 rounded-[10px] focus:outline-none focus:border-my-yellow;
}

.field-error {
  @apply absolute text-[13px] text-red-600 mt-[2px];
}

.auth-form {
  @apply flex flex-col gap-6 w-[520px] p-10 bg-my-lightblue rounded-[24px] shadow-md;
}

.active {
  @apply border-b-2 border-[#2355cc] text-[#2355cc];
}

.scrollbar {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.scrollbar::-webkit-scrollbar {
  width: 8px;
}

.scrollbar::-webkit-scrollbar-track {
  background: #daefff;
  border-radius: 12px;
}

.scrollbar::-webkit-scrollbar-thumb {
  background: #a6cae5;
  border-radius: 12px;
}

@supports not selector(::-webkit-scrollbar) {
  .scrollbar {
    scrollbar-color: #a6cae5 #daefff;
  }
}

/* ========================================== */
.contacts-form-wrapper::before {
  content: '';
  position: absolute;
  top: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 18vw;

  background-image: url('./assets/images/contacts/contacts_mobile1x.png');

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx),
screen and (min-device-pixel-ratio: 2) {
  .contacts-form-wrapper::before {
    background-image: url('./assets/images/contacts/contacts_mobile2x.png');
  }
}

@media only screen and (min-width: 768px) {
  .contacts-form-wrapper::before {
    display: none;
  }
}

/* ---------------------------------- */
.contacts-form-wrapper::after {
  content: '';
  position: absolute;
  bottom: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 18vw;

  background-image: url('./assets/images/contacts/contacts_2_mobile1x.png');

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx),
screen and (min-device-pixel-ratio: 2) {
  .contacts-form-wrapper::after {
    background-image: url('./assets/images/contacts/contacts_2_mobile2x.png');
  }
}

@media screen and (min-width: 768px) {
  .contacts-form-wrapper::after {
    height: 10vw;
    bottom: -15vw;
    background-image: url('./assets/images/contacts/contacts_2_tablet1x.png');
  }

  @media screen and (min-resolution: 1.5dppx),
  screen and (min-device-pixel-ratio: 2) {
    .contacts-form-wrapper::after {
      background-image: url('./assets/images/contacts/contacts_2_tablet2x.png');
    }
  }
}

@media screen and (min-width: 1440px) {
  .contacts-form-wrapper::after {
    height: 8vw;
    bottom: -11vw;
    background-image: url('./assets/images/contacts/contacts_2_desktop1x.png');
  }

  @media screen and (min-resolution: 1.5dppx),
  screen and (min-device-pixel-ratio: 2) {
    .contacts-form-wrapper::after {
      background-image: url('./assets/images/contacts/contacts_2_desktop2x.png');
    }
  }
}

/* ------------------------------------- */
.link-wrapper::before {
  content: '';
  position: absolute;
  top: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 11vw;

  background-image: url('./assets/images/footer/tape_1x_mob.jpg');

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx),
screen and (min-device-pixel-ratio: 2) {
  .link-wrapper::before {
    background-image: url('./assets/images/footer/tape_2x_mob.jpg');
  }
}

@media screen and (min-width: 768px) {
  .link-wrapper::before {
    top: -11vw;
    height: 4vw;
    background-image: url('./assets/images/footer/tape_1x_tablet.jpg');
  }

  @media screen and (min-resolution: 1.5dppx),
  screen and (min-device-pixel-ratio: 2) {
    .link-wrapper::before {
      background-image: url('./assets/images/footer/tape_2x_tablet.jpg');
    }
  }
}

@media screen and (min-width: 1440px) {
  .link-wrapper::before {
    top: -8vw;
    background-image: url('./assets/images/footer/tape_1x_desktop.jpg');
  }

  @media screen and (min-resolution: 1.5dppx),
  screen and (min-device-pixel-ratio: 2) {
    .link-wrapper::before {
      background-image: url('./assets/images/footer/tape_2x_desktop.jpg');
    }
  }
}

.custom-list li::before {
  content: '•';
  position: absolute;
  left: -18px;
  top: -3px;
  font-size: 20px;
}

@media screen and (min-width: 1440px) {
  .custom-list li::before {
    top: 3px;
  }
}

/* Styles carousel */
.slider-item-custom {
  height: 73px !important;
  width: 122px !important;
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
}

@media screen and (max-width: 767.98px) {
  .slider-custom {
    display: none;
  }
}

